eks-microservice/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /gateway(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: gateway-svc
            port:
              number: 80
      - path: /payment(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: payment-svc
            port:
              number: 80
      - path: /jobs(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: job-svc
            port:
              number: 80
